--- a/gb/17/3/25/n8966833.md
+++ b/gb/17/3/25/n8966833.md
@@ -1,28 +1,27 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/onzhi266/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中国漫画开拓者丰子恺的文革遭遇</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2017/03/a87c1c84705c3485542cd214a07046c9-600x400.jpg" />
-<h6>中国漫画大师丰子恺与其漫画像。（网路图片）
-</h6>
+
+<h6></h6>
 <hr>
-<p>【大纪元2017年03月26日讯】（大纪元记者叶蓁报导）民国初年的刊物突然刊出这样一幅画：新月升空，房舍无人，唯有木桌、茶具、竹帘与大面积的留白。自这幅《人散后，一钩新月天如水》问世，一大批名为“子恺<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%BC%AB%E7%94%BB.md#1">漫画</a>”的画作风行于中国，中国也从此有了“漫画”概念。</p>
-<p>寥寥数笔，便勾勒出富含童真与禅味的画境，是中国<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%BC%AB%E7%94%BB.md#1">漫画</a>大师<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E4%B8%B0%E5%AD%90%E6%81%BA.md#1">丰子恺</a>画作的风格。画如其人，丰子恺对社会、对人生，也多抱以率真、随缘的心态。若非晚年生活在红色政权下，他本应过着半仕半隐、半僧半俗的潇洒人生。</p>
-<figure id="attachment_6823887" style="width: 250px" class="wp-caption aligncenter"><img class="wp-image-6823887 size-full" src="https://i.epochtimes.com/assets/uploads/2009/08/908182313261734.jpg" alt="中国漫画大师丰子恺。（网路图片）" width="250" b="345" /><figcaption class="wp-caption-text">中国漫画大师<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E4%B8%B0%E5%AD%90%E6%81%BA.md#1">丰子恺</a>。（网路图片）</figcaption></figure>
+	<p>【大纪元2017年03月26日讯】（大纪元记者叶蓁报导）民国初年的刊物突然刊出这样一幅画：新月升空，房舍无人，唯有木桌、茶具、竹帘与大面积的留白。自这幅《人散后，一钩新月天如水》问世，一大批名为“子恺<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%BC%AB%E7%94%BB.md#1">漫画</a>”的画作风行于中国，中国也从此有了“漫画”概念。</p>
+<p>寥寥数笔，便勾勒出富含童真与禅味的画境，是中国<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%BC%AB%E7%94%BB.md#1">漫画</a>大师<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%B0%E5%AD%90%E6%81%BA.md#1">丰子恺</a>画作的风格。画如其人，丰子恺对社会、对人生，也多抱以率真、随缘的心态。若非晚年生活在红色政权下，他本应过着半仕半隐、半僧半俗的潇洒人生。</p>
+<figure id="attachment_6823887" aria-describedby="caption-attachment-6823887" style="width: 250px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2009/08/908182313261734.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-6823887 size-full" src="https://i.epochtimes.com/assets/uploads/2009/08/908182313261734.jpg" alt="中国漫画大师丰子恺。（网路图片）" width="250" b="345" /></a><figcaption id="caption-attachment-6823887" class="wp-caption-text">中国漫画大师<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%B0%E5%AD%90%E6%81%BA.md#1">丰子恺</a>。（网路图片）</figcaption></figure>
 <h2>绘画<strong>天才出少年</strong></h2>
 <p>幼时接受正统的儒家教育，丰子恺却阴差阳错爱上了绘画。学习《千家诗》时，他被书本上的每页单色木版画吸引，便偷偷用颜料为第一幅“大舜耕田图”着色，不小心把后面数张纸浸透，招致父亲震怒。尽管如此，绘画的兴趣已在心底生根，他总是在学业之余练习绘画技艺。</p>
 <p>十几岁时，私塾先生“搜查”出丰子恺藏在课堂的画谱，却“委以重任”，要他照着书中的形象，画一张放大着色的孔子像。在姐姐的帮助下，丰子恺先用方格放大法，按比例临摹出孔子形象，再用颜料上色。这幅画完成后，便挂于私塾堂前，成为学生每天必拜的圣贤化身。丰子恺的“小画家”名声也在家乡传扬。</p>
 <p>1914年，16岁的丰子恺考入省城第一学府——浙江第一师范。在这所自由新潮、又充满浓郁艺术氛围的校园里，丰子恺遇到精通绘画、诗词、音律、佛学的艺术家李叔同。在他的教导下，丰子恺系统学习西方绘画理论，并坚持写生与观摩西方名画，使得绘画技艺突飞猛进。李、丰二人更以画结缘，缔结一生的师生情义。</p>
 <p>丰子恺对漫画的兴趣，源于在一师的一件琐事。校长给学生训话时，高大的身材与矮小的讲台不成比例，丰子恺觉得这种反差很有趣，遂挥笔画出，立刻受到同学的喜爱。展现日常生活中饶有趣味的事物，正是丰子恺漫画的一大特点。不过在那时，他并不知道这种“漫画”奠定了他一生为之奉献的方向。</p>
 <p>毕业后，丰子恺赴日游学，专攻炭笔画。一次在旧书摊上，他偶然发现日本漫画家竹久梦二的画集，便为这种融汇西方构图技巧与东方画趣的简笔画所惊叹，更称其为“无声的诗”。1922年，丰子恺回国执教，并致力于创作漫画，逐渐为人熟知。</p>
-<figure id="attachment_6823851" style="width: 350px" class="wp-caption aligncenter"><img class="wp-image-6823851 size-full" src="https://i.epochtimes.com/assets/uploads/2009/08/908182247381734.gif" alt="丰子恺作品《屋漏在上，知之在下》。（网路图片）" width="350" b="474" /><figcaption class="wp-caption-text">丰子恺作品《屋漏在上，知之在下》。（网路图片）</figcaption></figure>
+<figure id="attachment_6823851" aria-describedby="caption-attachment-6823851" style="width: 350px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2009/08/908182247381734.gif" target="_blank" rel="noreferrer noopener"> <img class="wp-image-6823851 size-full" src="https://i.epochtimes.com/assets/uploads/2009/08/908182247381734.gif" alt="丰子恺作品《屋漏在上，知之在下》。（网路图片）" width="350" b="474" /></a><figcaption id="caption-attachment-6823851" class="wp-caption-text">丰子恺作品《屋漏在上，知之在下》。（网路图片）</figcaption></figure>
 <h2><strong>漫画禅味一生缘</strong></h2>
 <p>作家朱自清是他的伯乐。1924年，他第一个向丰子恺约稿，把他的画作《人散后，一钩新月天如水》发表于自己创办的刊物《我们的七月》上，成功引起同行郑振铎的注意。郑振铎将丰子恺的作品名为“子恺漫画”，连载于刊物《文学周报》中。至此，中国始有“漫画”的概念，便是指丰子恺这样“既有中国画风的萧疏淡远，又不失西洋画法的活泼憨恣”的画作。</p>
 <p>丰子恺的漫画取材于现实社会，题材多种多样，而表现普通人与民间生活是其主要题材。用一双灵慧而敏感的眼睛，捕捉平凡生活中的诗情画意，是丰子恺寻找灵感的法宝。作漫画时，他兴之所至，便随意挥洒，喜欢在表现现代生活的画作上，配以古诗词作标题，突出中国画的写意感。这类“古诗新画”大多风格简易朴实，内涵却含蓄隽永。</p>
 <p>早期，丰子恺的画作常常在现实中抒发“温情的讽刺”，而后期逐渐钟情于儿童题材，把儿童的心态、生活细节展现在画笔下。他羡慕儿童的天真无邪，认为“人间最富有灵气的是孩子”，孩子是真正的“人”。特别是有了子女后，丰子恺更把他们当作模特，把他们玩乐、生活中的举动，定格在图画中，表现他对童心的珍视与呵护。</p>
 <p>1918年，丰子恺的老师李叔同剃度出家，成为弘一法师；9年后，丰子恺也随师皈依佛门，成为居士。在佛法中修行的他，时常在画作中流露出超脱尘外的禅意与悲悯众生的仁心。在丰子恺60余年的创作生涯中，有一部历时46年的巨制《护生画集》。为纪念弘一法师五十岁寿辰，他完成第一卷的50幅画作，并请恩师分别题诗。此后师生约定，丰子恺每十年完成一卷画集，画作数量与恩师寿辰相当，直至百岁。至1973年，丰子恺完成第六卷画集，“护生”之诺至此圆满。</p>
 <p>这部《护生画集》既是寿礼，也是难得的佛教艺术珍品，内容多为动物漫画，包括戒杀、护生、善行三大主题，表达对生灵与自然的爱护。“护生”即“护心”，丰子恺以图像形式劝诫世人戒杀、放生，唤回人类道德与和平、仁爱、悲悯之心。丰子恺漫画中简约的形象与纯善的精神，或许正是它最打动人的地方。</p>
-<figure id="attachment_6823862" style="width: 252px" class="wp-caption aligncenter"><img class="wp-image-6823862 size-full" src="https://i.epochtimes.com/assets/uploads/2009/08/908182247401734.jpg" alt="丰子恺漫画《月上柳稍头》。（网路图片）" width="252" b="320" /><figcaption class="wp-caption-text">丰子恺漫画《月上柳稍头》。（网路图片）</figcaption></figure>
+<figure id="attachment_6823862" aria-describedby="caption-attachment-6823862" style="width: 252px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2009/08/908182247401734.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-6823862 size-full" src="https://i.epochtimes.com/assets/uploads/2009/08/908182247401734.jpg" alt="丰子恺漫画《月上柳稍头》。（网路图片）" width="252" b="320" /></a><figcaption id="caption-attachment-6823862" class="wp-caption-text">丰子恺漫画《月上柳稍头》。（网路图片）</figcaption></figure>
 <h2><strong>误信中共风波起</strong></h2>
 <p>身处大师辈出的民国时代，丰子恺与李叔同、陈寅恪、沈从文等人一样，也是兼善多文化领域的博雅文人。幼年的私塾教育和一师的综合教育，培养了他多方面的才华。他不仅是漫画家，还是作家、翻译家、艺术理论家。他的妙笔，不仅能勾勒形象世界，还能用文字构建想像世界，在文学世界上占有一席之地。</p>
 <p>丰子恺有散文集《缘缘堂随笔》《缘缘堂续笔》等，其闲适的文风与画风相似，呈现着对禅学的领悟及人性的关怀。他还有译作《源氏物语》《猎人笔记》等，艺术理论著作《丰子恺美术讲堂》《丰子恺音乐讲堂》等，可谓著作等身。</p>
@@ -31,7 +30,7 @@
 <p>尽管被中共当局“重用”，丰子恺在最“风光”的时候也多次受挫，逐渐触及中共本质。1950年，在一场文艺界宣传方向的会议上，他直言不讳，表达对梅、兰、竹、菊等传统画的推重。他认为，“成天叫喊打倒谁、打倒谁也是很累的”，“四君子”画恰好可以“陶冶性情、松弛神经”。这番发言立刻引来暴风骤雨式的批判，说他“迷恋过去的老一套”，“妄图开历史的倒车”。</p>
 <p>1962年，65岁的丰子恺在上海市第二届“文学艺术工作者大会”做一番谴责“大剪刀”的发言。他说中共的文化政策像一把大剪刀，把冬青树剪成千篇一律的模样，破坏自然状态。很快他又成为被批判的标靶。在会议结束3个月后，有人编造出一份批判他的罪证，说他在散文《阿咪》中，提到的“猫伯伯”与“毛伯伯”谐音，影射毛泽东。</p>
 <p>几轮批判下来，丰子恺对中共政权失望，有意退出政坛，然而在中共的专制统治下，独善其身是几乎不可能的。他不得不学会如何在中共的意识形态下生存。在思想改造运动中，他也和其他知识分子一样，作自我检讨，把自己的过去批评地体无完肤。当党媒《人民日报》向他约画稿时，他不仅谢绝邀请，并捐出之前的稿费，以示对政治行为的退避。</p>
-<figure id="attachment_6823833" style="width: 350px" class="wp-caption aligncenter"><img class="size-full wp-image-6823833" src="https://i.epochtimes.com/assets/uploads/2009/08/908182244371734.gif" alt="丰子恺漫画《两家的父亲》。（网路图片）" width="350" b="474" /><figcaption class="wp-caption-text">丰子恺漫画《两家的父亲》。（网路图片）</figcaption></figure>
+<figure id="attachment_6823833" aria-describedby="caption-attachment-6823833" style="width: 350px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2009/08/908182244371734.gif" target="_blank" rel="noreferrer noopener"> <img class="size-full wp-image-6823833" src="https://i.epochtimes.com/assets/uploads/2009/08/908182244371734.gif" alt="丰子恺漫画《两家的父亲》。（网路图片）" width="350" b="474" /></a><figcaption id="caption-attachment-6823833" class="wp-caption-text">丰子恺漫画《两家的父亲》。（网路图片）</figcaption></figure>
 <h2><strong>日月楼中日月黯</strong></h2>
 <p>1954年底，丰子恺一家搬迁新居，因在室内可以看到“日月运转”，便名为“日月楼”。在这一方天地中，他埋头绘画、写作，度过几年的清闲生活。然而当十年文革到来时，丰子恺在中共体制下的谨慎言行并没有让他远离劫难。由于他的社会地位与早年受批判的罪名，让他成为重点批判的对象。</p>
 <p>1966年6月，上海中国画院出现一张从天花板垂到地面的大字报，批判的正是丰子恺的《阿咪》。后来“文革工作组”进驻画院，将院长丰子恺划为“反动学术权威”，扣上“反革命画家”“反共老手”“漏网大右派”等一系列罪名，更列为上海市“十大重点批斗对象”之一。他被勒令天天到单位“交代罪行”、接受批判；同时，关牛棚、游街、批斗、克扣工资等迫害接踵而至。</p>
@@ -45,48 +44,46 @@
 <p>参考资料：</p>
 <p>丰一吟，《爸爸丰子恺》，中国青年出版社，2014年。</p>
 <p>责任编辑：张宪义</p>
-
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/3/20/n8946300.md#1">两代精英成右派 地质学家谢家荣饮恨文革</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/3/17/n8936534.md#1">“大右派”储安平的生死谜案</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/3/13/n8912630.md#1">中国画泰斗潘天寿的文革劫难</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/3/2/n8866965.md#1">陈梦家——为传统汉字殒命的悲壮文人</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/2/20/n8831384.md#1">文革中惨遭灭门的海归博士萧光琰</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/1/21/n8731741.md#1">老舍──自沉太平湖的文革殉难者</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/12/10/15/n3705886.md#1">【林辉】：漫画大师丰子恺的人生劫难</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/12/10/15/n3705886.md#1">【林辉】：漫画大师丰子恺的人生劫难</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/1/21/n8731741.md#1">老舍──自沉太平湖的文革殉难者</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/2/20/n8831384.md#1">文革中惨遭灭门的海归博士萧光琰</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/3/2/n8866965.md#1">陈梦家——为传统汉字殒命的悲壮文人</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/9/8/19/n2628774.md#1">丰子恺的漫画与人生</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/27/n10252063.md#1" target="_blank">袁斌：用鲜血染红的“恶之花”</a></li><li><a href="https://github.com/onzhi266/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/29/n10261439.md#1" target="_blank">从死神手里夺回来的生命</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/28/n11903759.md#1" target="_blank">朱镕基发言3分钟被打成右派20年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/14/n3964268.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑（2）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/2/n11909596.md#1">【命理】什么样的女子能够旺夫？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948158.md#1">【现场视频】湖北襄阳菜农夜色中卖菜</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947678.md#1">【现场视频】武汉江岸区又有人跳楼</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/3/25/n8966833.htm">中国漫画开拓者丰子恺的文革遭遇</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/3/25/n8966833.htm">中国漫画开拓者丰子恺的文革遭遇</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/onzhi266/djy/blob/master/gb/17/3/25/n8966833.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/17/3/25/n8966833.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
